# show_ai_usage

./: .gitignore  Doc.md  Next.md  PLAN.md  README.md  optimization-plan.md  pyproject.toml
.claude/: settings.json
.omo/run-continuation/: ses_14d75b24effeP1x7x3T6dymYub.json  ses_14e58a1f1ffeAaUCVED0r97k5F.json  ses_14ee29efaffezIpL9GF4l2bjkE.json  ses_1536730b7ffelWV4udY9A0d1PI.json
.opencode/: oh-my-openagent_codex.json  oh-my-openagent_codex_kimi.json  oh-my-openagent_kimi.json  oh-my-openagent_minimax.json
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/scripts/: sync_config.py
package/contents/ui/: CompactRepresentation.qml  FullRepresentation.qml  main.qml
package/contents/ui/config/: AdvancedConfig.qml  DisplayConfig.qml  GeneralConfig.qml  PollingConfig.qml  ProviderRow.qml
poller/: browser.py  config.py  logger.py  main.py  storage.py
poller/providers/: __init__.py  base.py  claude.py  codex.py  direct.py  kimi.py  minimax.py
scripts/: build-plugin.sh  install.sh  uninstall.sh
systemd/: show-ai-usage.service  show-ai-usage.timer
tests/: test_claude_direct.py  test_direct_capability.py  test_kimi_direct.py  test_minimax_direct.py  test_poll_partition.py
